Add: circle in index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Circle</title>
+    <style type="text/css">
+        #circle-container {
+            background-color: red;
+            border-radius: 50%;
+            display: inline-block;
+            height: 100px;
+            width: 100px;
+        }
+    </style>
 </head>
 <body>
-
+    <div id="main-container">
+        <div id="circle-container"></div>
+    </div>
 </body>
+<script type="application/javascript" src="index.js"></script>
 </html>
