Add: circle move function and restart button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Circle</title>
     <style type="text/css">
+        #main-container {
+            margin-left: 0px;
+        }
+
         #circle-container {
             background-color: red;
             border-radius: 50%;
@@ -17,6 +21,7 @@
     <div id="main-container">
         <div id="circle-container"></div>
     </div>
+    <button id="restart" disabled>Restart</button>
 </body>
 <script type="application/javascript" src="index.js"></script>
 </html>
